Adjust spacing between displays so that everything is visible without scrolling Update zoom functions so that the timer display is also zoomed in and out Fix text spacing issue on clock display when in 12 hour mode. Day text was placed immediately after am or pm

--- a/myStyle.css
+++ b/myStyle.css
@@ -4,7 +4,7 @@ body {
 
 #Timer{
 	text-align: center;
-	height:25vh;
+	height:12vh;
 	width: 100vw;
 	font-size: 100;
 	color: navy;
@@ -12,7 +12,7 @@ body {
 
 #Stopwatch{
 	text-align: center;
-	height:25vh;
+	height:12vh;
 	width: 100vw;
 	font-size: 100;
 	color: navy;
@@ -20,7 +20,7 @@ body {
 
 #timerclk{
 	text-align: center;
-	height:25vh;
+	height:12vh;
 	width: 100vw;
 	font-size: 100;
 	color: navy;
